--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 							type='text'
 							id='name'
 							name='name'
-							placeholder='ex. John Doe'>
+							placeholder='ex. John Doe' required>
 					</div>
 					<div class='form-control'>
 						<label for='email'>Email</label><br>
@@ -28,7 +28,7 @@
 							type='email'
 							id='email'
 							name='email'
-							placeholder='ex. john@doe.com'>
+							placeholder='ex. john@doe.com' required>
 					</div>
 					<div class='form-control'>
 						<label for='password'>Password</label><br>
@@ -36,7 +36,7 @@
 							type='password'
 							id='password'
 							name='password'
-							placeholder='ex. ········'>
+							placeholder='ex. ········' required>
 					</div>
 					<div class='form-control'>
 						<button>Go!</button>
